--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
-    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsdom": "^26.1.0",
+    "html-to-text": "^9.0.5",
     "nodemon": "^3.1.9"
   }
 }
